Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -10,4 +10,201 @@
 
 ## Введение
 
-Безопасность является обязательным условием системного администрирования. Как хороший системный администратор Linux, вы должны следить за рядом вещей, таких как особые разрешения для файлов, устаревание пароля пользователя, открытые порты и сокеты, ограничение использования системных ресурсов, работа с вошедшими в систему пользователями и повышение привилегий с помощью su и sudo. В этом уроке мы рассмотрим каждую из этих тем.
+Безопасность является обязательным условием системного администрирования. Как хороший системный администратор Linux, вы должны следить за рядом вещей, таких как особые права доступа к файлам, устаревание пароля пользователя, открытые порты и сокеты, ограничение использования системных ресурсов, работа с вошедшими в систему пользователями и повышение привилегий с помощью `su` и `sudo`. В этом уроке мы рассмотрим каждую из этих тем.
+
+
+## Проверка файлов с установленными SUID и SGID
+
+Помимо традиционного набора прав на *чтение*, *запись* и *выполнение*, файлы в системе Linux также могут иметь некоторые специальные права, такие как биты SUID или SGID. 
+
+Бит SUID позволяет запускать файл с привилегиями владельца файла. Он численно представлен `4000` и символически представлен либо `s`, либо `S` в бите права на *выполнение* владельцем. Классическим примером исполняемого файла с набором разрешений SUID является `passwd`:
+
+```console
+carol@debian:~$ ls -l /usr/bin/passwd
+-rwsr-xr-x 1 root root 63736 jul 27  2018 /usr/bin/passwd
+```
+
+Строчная буква `s` в `rws` указывает на наличие SUID в файле вместе с разрешением на выполнение. Вместо этого заглавная буква `S` (`rwS`) будет означать, что базовое право на *выполнение* не установлено.
+
+>Вы узнаете о `passwd` в следующем разделе. Утилита в основном используется `root` для установки/изменения паролей пользователей (например: `passwd carol`). Однако обычные пользователи могут использовать его и для изменения собственных паролей. Поэтому он поставляется с набором SUID.
+
+С другой стороны, бит SGID может быть установлен как для файлов, так и для каталогов. С файлами его поведение эквивалентно поведению SUID, но привилегии принадлежат владельцу группы. Однако, если он установлен в каталоге, он позволит всем файлам, созданным в нем, унаследовать право собственности на группу каталога. Как и SUID, SGID символически представлен либо `s`, либо `S` в бите права на выполнение группы. Численно он представлен как `2000`. Вы можете установить SGID для каталога с помощью `chmod`. Вы должны добавить `2` (SGID) к традиционным правам (в нашем случае `755`):
+
+```console
+carol@debian:~$ ls -ld shared_directory
+drwxr-xr-x 2 carol carol 4096 may 30 23:55 shared_directory
+carol@debian:~$ sudo chmod 2755 shared_directory/
+carol@debian:~$ ls -ld shared_directory
+drwxr-sr-x 2 carol carol 4096 may 30 23:55 shared_directory
+```
+
+Чтобы найти файлы с одним или обоими установленными SUID и SGID, вы можете использовать команду `find` и использовать параметр `-perm`. Вы можете использовать как числовые, так и символьные значения. Значения, в свою очередь, могут передаваться сами по себе или им предшествовать дефис (`-`) или косая черта (`/`). Смысл в следующем: 
+
+`-perm numeric-vaue` или `-perm symbolic-value`  
+находить файлы исключительно со специальным разрешением 
+
+`-perm -numeric-value` или `-perm -symbolic-value`  
+найти файлы со специальными правами доступа и другими правами 
+
+`-perm / numeric-value` или `-perm / symbolic-value`  
+найти файлы, имеющие какое-либо из специальных прав доступа (и других прав доступа) 
+
+Например, чтобы найти файлы, в текущем рабочем каталоге которых установлен только SUID, вы воспользуетесь следующей командой:
+
+```console
+carol@debian:~$ find . -perm 4000
+carol@debian:~$ touch file
+carol@debian:~$ chmod 4000 file
+carol@debian:~$ find . -perm 4000
+./file.
+```
+
+Обратите внимание, как - поскольку не было никаких файлов, имеющих исключительно SUID, - мы создали его, чтобы показать некоторые результаты. Вы можете запустить ту же команду в символической записи:
+
+```console
+carol@debian:~$ find . -perm u+s
+./file
+```
+
+Чтобы найти файлы, соответствующие SUID (независимо от других разрешений) в каталоге `/usr/bin/`, вы можете использовать любую из следующих команд:
+
+```console
+carol@debian:~$ sudo find /usr/bin -perm -4000
+/usr/bin/umount
+/usr/bin/newgrp
+/usr/bin/gpasswd
+/usr/bin/chfn
+/usr/bin/mount
+/usr/bin/passwd
+/usr/bin/chsh
+/usr/bin/sudo
+/usr/bin/su
+carol@debian:~$ sudo find /usr/bin -perm -u+s
+/usr/bin/umount
+/usr/bin/newgrp
+/usr/bin/gpasswd
+/usr/bin/chfn
+/usr/bin/mount
+/usr/bin/passwd
+/usr/bin/chsh
+/usr/bin/sudo
+/usr/bin/su
+```
+
+Если вы ищете файлы в том же каталоге с установленным битом SGID, вы можете выполнить `find /usr/bin/ -perm -2000` или `find /usr/bin/ -perm -g +s`. 
+
+Наконец, чтобы найти файлы с одним из двух специальных разрешений, добавьте `4` и `2` и используйте `/`:
+
+```console
+carol@debian:~$ sudo find /usr/bin -perm /6000
+/usr/bin/dotlock.mailutils
+/usr/bin/umount
+/usr/bin/newgrp
+/usr/bin/wall
+/usr/bin/ssh-agent
+/usr/bin/chage
+/usr/bin/dotlockfile
+/usr/bin/gpasswd
+/usr/bin/chfn
+/usr/bin/mount
+/usr/bin/passwd
+/usr/bin/chsh
+/usr/bin/expiry
+/usr/bin/sudo
+/usr/bin/bsd-write
+/usr/bin/crontab
+/usr/bin/su
+```
+
+
+## Управление паролями и устаревание
+
+Как отмечалось выше, вы можете использовать утилиту `passwd`, чтобы изменить свой пароль как обычный пользователь. Кроме того, вы можете передать ключ `-S` или `--status`, чтобы получить информацию о статусе вашей учетной записи:
+
+```console
+carol@debian:~$ passwd -S
+carol P 12/07/2019 0 99999 7 -1
+```
+
+Вот разбивка семи полей, которые вы получаете в выводе: 
+
+`carol`  
+Логин пользователя. 
+
+`p`  
+Это указывает на то, что у пользователя есть действующий пароль (`P`); другие возможные значения: `L` для заблокированного пароля и `NP` для отсутствия пароля. 
+
+`07.12.2019`  
+Дата последней смены пароля. 
+
+`0`  
+Минимальный возраст в днях (минимальное количество дней между сменой пароля). Значение `0` означает, что пароль можно изменить в любое время. 
+
+`99999`  
+Максимальный возраст в днях (максимальное количество дней, в течение которых действует пароль). Значение `99999` отключит истечение срока действия пароля. 
+
+`7`  
+Период предупреждения в днях (количество дней до истечения срока действия пароля, о котором пользователь будет предупрежден). 
+
+`-1`  
+Период неактивности пароля в днях (количество дней бездействия после истечения срока действия пароля до блокировки учетной записи). Значение `-1` удалит неактивность аккаунта. 
+
+Помимо отчетов о состоянии учетной записи, вы будете использовать команду `passwd` как root для выполнения некоторых основных операций по обслуживанию учетной записи. Вы можете заблокировать и разблокировать учетные записи, заставить пользователя изменить свой пароль при следующем входе в систему и удалить пароль пользователя с помощью параметров `-l`, `-u`, `-e` и `-d` соответственно. 
+
+Чтобы проверить эти параметры, здесь удобно ввести команду `su`. С помощью `su` вы можете менять пользователей во время сеанса входа в систему. Так, например, давайте использовать `passwd` как root, чтобы заблокировать пароль `carol`. Затем мы переключимся на `carol` и проверим статус нашей учетной записи, чтобы убедиться, что пароль фактически заблокирован (`L`) и не может быть изменен. Наконец, вернувшись к пользователю root, мы разблокируем пароль `carol`:
+
+```console
+root@debian:~# passwd -l carol
+passwd: password expiry information changed.
+root@debian:~# su - carol
+carol@debian:~$ passwd -S
+carol L 05/31/2020 0 99999 7 -1
+carol@debian:~$ passwd
+Changing password for carol.
+Current password:
+passwd: Authentication token manipulation error
+passwd: password unchanged
+carol@debian:~$ exit
+logout
+root@debian:~# passwd -u carol
+passwd: password expiry information changed.
+```
+
+Кроме того, вы также можете заблокировать и разблокировать пароль пользователя с помощью команды `usermod`: 
+
+Заблокировать пароль пользователя `carol`  
+`usermod -L carol` или `usermod --lock carol`. 
+
+Разблокировать пароль пользователя `carol`  
+`usermod -U carol` или `usermod --unlock carol`.
+
+>С переключателями `-f` или `--inactive` можно также использовать `usermod` для установки количества дней до отключения учетной записи с просроченным паролем (например: `usermod -f 3 carol`).
+
+Помимо `passwd` и `usermod`, самая прямая команда для работы с паролем и устареванием учетной записи - `chage` («изменить возраст»). Как root, вы можете передать `chage` ключ `-l` (или `--list`), за которым следует имя пользователя, чтобы на экране был напечатан текущий пароль этого пользователя и информация об истечении срока действия учетной записи; как обычный пользователь, вы можете просматривать свою информацию:
+
+```console
+carol@debian:~$ chage -l carol
+Last password change					: Aug 06, 2019
+Password expires					: never
+Password inactive					: never
+Account expires						: never
+Minimum number of days between password change		: 0
+Maximum number of days between password change		: 99999
+Number of days of warning before password expires	: 7
+```
+
+Запустить без параметров и только после имени пользователя, `chage` будет вести себя в интерактивном режиме:
+
+```console
+root@debian:~# chage carol
+Changing the aging information for carol
+Enter the new value, or press ENTER for the default
+
+	Minimum Password Age [0]:
+	Maximum Password Age [99999]:
+	Last Password Change (YYYY-MM-DD) [2020-06-01]:
+	Password Expiration Warning [7]:
+	Password Inactive [-1]:
+	Account Expiration Date (YYYY-MM-DD) [-1]:
+```
+
