Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -208,3 +208,137 @@ Enter the new value, or press ENTER for the default
 	Account Expiration Date (YYYY-MM-DD) [-1]:
 ```
 
+Возможны следующие варианты изменения различных настроек `chage`: 
+
+`-m days username` или `--mindays days username`  
+Укажите минимальное количество дней между сменой пароля (например: `chage -m 5 carol`). Значение `0` позволит пользователю изменить свой пароль в любое время. 
+
+`-M days username` или `--maxdays username`  
+Укажите максимальное количество дней, в течение которых пароль будет действителен (например: `chage -M 30 carol`). Чтобы отключить истечение срока действия пароля, обычно задают этой опции значение `99999`. 
+
+`-d days username` или `--lastday days username`  
+Укажите количество дней с момента последней смены пароля (например: `chage -d 10 carol`). Значение `0` заставит пользователя сменить пароль при следующем входе в систему. 
+
+`-W days username` или `--warndays days username`  
+Укажите количество дней, в течение которых пользователю будут напоминать об истечении срока действия пароля. 
+
+`-I days username` или `--inactive days username`  
+Укажите количество дней бездействия после истечения срока действия пароля (например: `chage -I 10 carol`) - так же, как `usermod -f` или `usermod --inactive`. По прошествии указанного количества дней учетная запись будет заблокирована. Однако при значении `0` учетная запись не будет заблокирована. 
+
+`-E date username` или `--expiredate date username`  
+Укажите дату (или количество дней с эпохи - 1 января 1970 г.), в которую учетная запись будет заблокирована. Обычно он выражается в формате `YYYY-MM-DD`(например: `chage -E 2050-12-13 carol`).
+
+>Вы можете узнать больше о `passwd`, `usermod` и `chage` - и их опциях - на соответствующих страницах руководства. 
+
+
+## Обнаружение открытых портов
+
+Когда дело доходит до отслеживания открытых портов, в большинстве систем Linux присутствуют четыре мощные утилиты: `lsof`, `fuser`, `netstat` и `nmap`. Мы рассмотрим их в этом разделе. 
+
+`lsof` означает «список открытых файлов», что немаловажно, учитывая, что для Linux все является файлом. Фактически, если вы введете `lsof` в терминал, вы получите большой список обычных файлов, файлов устройств, сокетов и т. д. Однако в рамках этого урока мы в основном сосредоточимся на портах. Чтобы распечатать список всех сетевых файлов «Интернет», запустите `lsof` с параметром `-i`:
+
+```console
+root@debian:~# lsof -i
+COMMAND  PID     USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
+dhclient 357     root    7u  IPv4  13493      0t0  UDP *:bootpc
+sshd     389     root    3u  IPv4  13689      0t0  TCP *:ssh (LISTEN)
+sshd     389     root    4u  IPv6  13700      0t0  TCP *:ssh (LISTEN)
+apache2  399     root    3u  IPv6  13826      0t0  TCP *:http (LISTEN)
+apache2  401 www-data    3u  IPv6  13826      0t0  TCP *:http (LISTEN)
+apache2  402 www-data    3u  IPv6  13826      0t0  TCP *:http (LISTEN)
+sshd     557     root    3u  IPv4  14701      0t0  TCP 192.168.1.7:ssh->192.168.1.4:60510 (ESTABLISHED)
+sshd     569    carol    3u  IPv4  14701      0t0  TCP 192.168.1.7:ssh->192.168.1.4:60510 (ESTABLISHED)
+```
+
+Помимо службы `bootpc`, которая используется DHCP, на выходе показаны две службы, прослушивающие соединения - `ssh` и веб-сервер Apache (`http`), а также два установленных SSH-соединения. Вы можете указать конкретный хост с обозначением `@ip-address`, чтобы проверить его соединения:
+
+```console
+root@debian:~# lsof -i@192.168.1.7
+COMMAND PID  USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
+sshd    557  root    3u  IPv4  14701      0t0  TCP 192.168.1.7:ssh->192.168.1.4:60510 (ESTABLISHED)
+sshd    569 carol    3u  IPv4  14701      0t0  TCP 192.168.1.7:ssh->192.168.1.4:60510 (ESTABLISHED)
+```
+
+>Чтобы вывести только сетевые файлы IPv4 и IPv6, используйте параметры `-i4` и `-i6` соответственно.
+
+Точно так же вы можете фильтровать по портам, передав параметр `-i` (или `-i @*ip-address*`) в аргумент `:port`:
+
+```console
+root@debian:~# lsof -i :22
+COMMAND PID  USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
+sshd    389  root    3u  IPv4  13689      0t0  TCP *:ssh (LISTEN)
+sshd    389  root    4u  IPv6  13700      0t0  TCP *:ssh (LISTEN)
+sshd    557  root    3u  IPv4  14701      0t0  TCP 192.168.1.7:ssh->192.168.1.4:60510 (ESTABLISHED)
+sshd    569 carol    3u  IPv4  14701      0t0  TCP 192.168.1.7:ssh->192.168.1.4:60510 (ESTABLISHED)
+```
+
+Несколько портов разделяются запятыми (а диапазоны указываются через тире):
+
+```console
+root@debian:~# lsof -i@192.168.1.7:22,80
+COMMAND PID  USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
+sshd    705  root    3u  IPv4  13960      0t0  TCP 192.168.1.7:ssh->192.168.1.4:44766 (ESTABLISHED)
+sshd    718 carol    3u  IPv4  13960      0t0  TCP 192.168.1.7:ssh->192.168.1.4:44766 (ESTABLISHED)
+```
+
+Количество опций, доступных для `lsof`, впечатляет. Чтобы узнать больше, обратитесь к его странице руководства.
+
+Следующим в списке сетевых команд идет `fuser`. Его основная цель - найти «пользователя файла», что включает в себя знание того, какие процессы к каким файлам обращаются; он также дает вам некоторую другую информацию, такую как тип доступа. Например, чтобы проверить текущий рабочий каталог, достаточно запустить `fuser`. Однако, чтобы получить немного больше информации, удобно использовать подробный параметр (`-v` или `--verbose`):
+
+```console
+root@debian:~# fuser .
+/root:                 580c
+root@debian:~# fuser -v .
+                     USER        PID ACCESS COMMAND
+/root:               root        580 ..c.. bash
+```
+
+Разберем вывод: 
+
+`File`  
+Файл, о котором мы получаем информацию (`/root`). 
+
+`USER` столбец  
+Владелец файла (`root`). 
+
+Столбец `PID`  
+Идентификатор процесса (`580`).  
+
+Столбец `ACCESS`  
+Тип доступа (`..c ..`). Один из:  
+`c`  
+Текущий каталог. 
+
+`е`  
+Исполняемый файл запущен. 
+
+`f`  
+Открыть файл (опускается в режиме отображения по умолчанию). 
+
+`F`  
+Открыть файл для записи (опускается в режиме отображения по умолчанию). 
+
+`r`  
+корневая директория. 
+
+`m`  
+размеченный файл или общая библиотека. 
+
+`.`  
+Заполнитель (опускается в режиме отображения по умолчанию). 
+
+Столбец `COMMAND`  
+Команда, связанная с файлом (`bash`). 
+
+С параметром `-n` (или `--namespace`) вы можете найти информацию о сетевых портах/сокетах. Вы также должны указать сетевой протокол и номер порта. Таким образом, чтобы получить информацию о веб-сервере Apache, вы выполните следующую команду:
+
+```console
+root@debian:~# fuser -vn tcp 80
+                     USER        PID ACCESS COMMAND
+80/tcp:              root        402 F.... apache2
+                     www-data    404 F.... apache2
+                     www-data    405 F.... apache2
+```
+
+>`fuser` также можно использовать для уничтожения процессов, обращающихся к файлу, с помощью переключателей `-k` или `--kill` (например: `fuser -k 80/tcp`). Обратитесь к странице руководства для получения более подробной информации.
+
