Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -827,3 +827,87 @@ Cmnd_Alias SERVICES = /usr/bin/systemctl *
 
 >Существует четвертый тип псевдонима, который вы можете включить в `/etc/sudoers`:  *runas aliases* (`Runas_Alias`). Они очень похожи на псевдонимы пользователей, но позволяют указывать пользователей по их идентификатору пользователя (UID). Эта функция может быть удобна в некоторых сценариях.
 
+
+## Упражнения для закрепления
+
+1. Заполните следующую таблицу, касающуюся особых разрешений:
+| **Специальное разрешение** | **Числовое представление** | **Символическое представление** | **Найти файлы *только* с этим набором разрешений** |
+|:---------------------------|:---------------------------|:--------------------------------|:---------------------------------------------------|
+| SUID                       |                            |                                 |                                                    |  
+| SGID                       |                            |                                 |                                                    |   
+2. Отображение файлов только с установленным битом SUID или SGID обычно не очень практично. Выполните следующие задачи, чтобы доказать, что ваш поиск может быть более продуктивным: 
+* Найдите все файлы с SUID (и другими разрешениями), установленными в `/usr/bin`: 
+* Найдите все файлы с SGID (и другими разрешениями), установленными в `/usr/bin`: 
+* Найдите все файлы с SUID или SGID, установленными в `/usr/bin`:
+ 
+3. `chage` позволяет вам изменить информацию об истечении срока действия пароля пользователя. От имени пользователя root заполните следующую таблицу, указав правильные команды для пользователя mary:
+
+4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:
+
+5. Выполните следующие задачи, касающиеся размера *резидентного набора* (RSS) и `ulimit` как обычный пользователь: 
+* Отобразить *мягкие* ограничения по максимальному RSS: 
+* Отобразите *жесткие* ограничения на максимальный RSS: 
+* Установите *мягкие* ограничения на максимальный RSS до 5000 килобайт: 
+* Установите *жесткие* ограничения на максимальный RSS до 10 000 килобайт: 
+* Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный* RSS до 15 000 килобайт. Ты можешь сделать это? Почему?
+
+6. Рассмотрите следующую `last` строку вывода команды и ответьте на вопросы:
+```console
+carol    pts/0        192.168.1.4      Sun May 31 14:16 - 14:22  (00:06)
+```
+* `carol` была подключена с удаленного хоста? Почему?
+*  Как долго длилась сессия `carol`? 
+*  Была ли `carol` подключена через настоящий классический текстовый терминал? Почему?
+
+7. Рассмотрите следующий отрывок из `/etc/sudoers` и ответьте на вопрос ниже.
+```console
+# Host alias specification
+
+Host_Alias SERVERS = 192.168.1.7, server1, server2
+
+# User alias specification
+
+User_Alias REGULAR_USERS = john, mary, alex
+
+User_Alias PRIVILEGED_USERS = mimi, alex
+
+User_Alias ADMINS = carol, %sudo, PRIVILEGED_USERS, !REGULAR_USERS
+
+# Cmnd alias specification
+
+Cmnd_Alias WEB_SERVER_STATUS = /usr/bin/systemctl status apache2
+
+# User privilege specification
+root    ALL=(ALL:ALL) ALL
+ADMINS  SERVERS=WEB_SERVER_STATUS
+
+# Allow members of group sudo to execute any command
+%sudo   ALL=(ALL:ALL) ALL
+```
+Может ли `alex` проверить статус веб-сервера Apache на любом хосте? Почему?
+
+
+## Упражнения на размышление
+
+1. Помимо SUID и SGID, есть третье специальное разрешение: *sticky bit*. В настоящее время он в основном используется в таких каталогах, как `/tmp`, чтобы обычные пользователи не могли удалять или перемещать файлы, кроме их собственных. Выполните следующие задачи: 
+* Установите *липкий бит* на `~/temporal`: 
+* Найдите каталоги с *липким битом* (и любыми другими разрешениями), установленным в вашем домашнем каталоге: 
+* Отключите *липкий бит* на `~/temporal`: 
+
+2. Когда пароль пользователя заблокирован с помощью `passwd -l username` или `usermod -L username`, как вы можете определить это, заглянув в `/etc/shadow`? 
+
+3. Что является эквивалентом команды `usermod` для имени пользователя `chage -E date username` или `chage --expiredate date username`? 
+
+4. Предоставьте две разные команды `nmap` для сканирования всех портов 65535 на локальном хосте:
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+
+## Ответы на упражнения для размышления
