Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -903,7 +903,69 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 
 ## Резюме
 
+В этом уроке вы узнали, как выполнять ряд задач по администрированию безопасности. Были рассмотрены следующие темы: 
+* Поиск файлов со специальными установленными правами доступа SUID и SGID. 
+* Установка и изменение паролей пользователей и работа с информацией об устаревании паролей. 
+* Использование ряда сетевых утилит для обнаружения открытых портов на хостах/сетях. 
+* Установка лимитов на системные ресурсы. 
+* Проверка пользователей, которые входили в систему или в настоящее время вошли в систему. 
+* Базовое использование и настройка `sudo` (через файл `/etc/sudoers`). 
 
+Команды и файлы, обсуждаемые в этом уроке: 
+
+`find`  
+Поиск файлов в иерархии каталогов. 
+
+`passwd`  
+Сменить пароль пользователя. 
+
+`chmod`  
+Изменение битов прав доступа файла. 
+
+`chage`  
+Изменение информации об истечении срока действия пароля пользователя. 
+
+`lsof`  
+Список открытых файлов. 
+
+`fuser`  
+Идентифицирует процессы с помощью файлов или сокетов. 
+
+`netstat`  
+Распечатает сетевые подключения. 
+
+`nmap`  
+Инструмент исследования сети и сканер портов. 
+
+`ulimit`  
+Получение и установка ограничений для пользователей. 
+
+`/etc/security/limits.conf`  
+Файл конфигурации для применения ограничений для пользователей. 
+
+`last`  
+Выводит на экран список последних авторизованных пользователей. 
+
+`lastb`  
+Выводит на экран список неудачных попыток входа в систему. 
+
+`/var/log/wtmp`  
+База данных входов пользователей в систему. 
+
+`who`  
+Показывает, кто вошел в систему. 
+
+`w`  
+Показывает, кто вошел в систему и что они делают. 
+
+`su`  
+Изменение пользователя или войти как суперпользователь. 
+
+`sudo`  
+Выполнить команду от имени другого пользователя (включая суперпользователя). 
+
+`/etc/sudoers`  
+Файл конфигурации по умолчанию для политики безопасности `sudo`.
 
 
 ## Ответы на упражнения для закрепления
