Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -835,12 +835,22 @@ Cmnd_Alias SERVICES = /usr/bin/systemctl *
 |:---------------------------|:---------------------------|:--------------------------------|:---------------------------------------------------|
 | SUID                       |                            |                                 |                                                    |  
 | SGID                       |                            |                                 |                                                    |   
-2. Отображение файлов только с установленным битом SUID или SGID обычно не очень практично. Выполните следующие задачи, чтобы доказать, что ваш поиск может быть более продуктивным: 
-* Найдите все файлы с SUID (и другими разрешениями), установленными в `/usr/bin`: 
-* Найдите все файлы с SGID (и другими разрешениями), установленными в `/usr/bin`: 
-* Найдите все файлы с SUID или SGID, установленными в `/usr/bin`:
+
+2. Отображение файлов только с установленным битом `SUID` или `SGID` обычно не очень практично. Выполните следующие задачи, чтобы доказать, что ваш поиск может быть более продуктивным: 
+* Найдите все файлы с `SUID` (и другими разрешениями), установленными в `/usr/bin`: 
+* Найдите все файлы с `SGID` (и другими разрешениями), установленными в `/usr/bin`: 
+* Найдите все файлы с `SUID` или `SGID`, установленными в `/usr/bin`:
  
-3. `chage` позволяет вам изменить информацию об истечении срока действия пароля пользователя. От имени пользователя root заполните следующую таблицу, указав правильные команды для пользователя mary:
+3. `chage` позволяет вам изменить информацию об истечении срока действия пароля пользователя. От имени пользователя root заполните следующую таблицу, указав правильные команды для пользователя `mary`:
+| **Значение** | **Команды `chage`** |
+|:-------------|:--------------------|
+| Сделанный пароль будет действителен 365 дней. |  | 
+| Заставить пользователя сменить пароль при следующем входе в систему. |  |
+| Установите минимальное количество дней между сменой пароля равным 1. |  |
+| Отключить истечение срока действия пароля. |  |
+| Разрешить пользователю изменять свой пароль в любое время. |  |
+| Установите период предупреждения на 7 дней, а срок действия учетной записи - 20 августа 2050 года. |  |
+|Распечатать информацию об истечении срока действия текущего пароля пользователя |  |
 
 4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:
 
@@ -970,6 +980,73 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 
 ## Ответы на упражнения для закрепления
 
+**1. Заполните следующую таблицу, касающуюся особых разрешений:**  
+| **Специальное разрешение** | **Числовое представление** | **Символическое представление** | **Найти файлы *только* с этим набором разрешений** |
+|:---------------------------|:---------------------------|:--------------------------------|:---------------------------------------------------|
+| SUID                       |          `4000`            |             `s`, `S`            |         `find -perm 4000, find -perm u+s`          |  
+| SGID                       |          `2000`            |             `s`, `S`            |         `find -perm 2000, find -perm g+s`          |   
 
+**2. Отображение файлов *только* с установленным битом `SUID` или `SGID` обычно не очень практично. Выполните следующие задачи, чтобы доказать, что ваш поиск может быть более продуктивным:**  
+* Найдите все файлы с `SUID` (и другими разрешениями), установленными в `/usr/bin`:  
+`find /usr/bin -perm -4000` или `find /usr/bin -perm -u+s`
+* Найдите все файлы с `SGID` (и другими разрешениями), установленными в `/usr/bin`: 
+`find /usr/bin -perm -2000` или `find /usr/bin -perm -g+s`
+* Найдите все файлы с `SUID` или `SGID`, установленными в `/usr/bin`:
+`find /usr/bin -perm /6000` 
+ 
+**3. `chage` позволяет вам изменить информацию об истечении срока действия пароля пользователя. От имени пользователя root заполните следующую таблицу, указав правильные команды для пользователя `mary`:**  
+| **Значение** | **Команды `chage`** |
+|:-------------|:--------------------|
+| Сделанный пароль будет действителен 365 дней. |  | 
+| Заставить пользователя сменить пароль при следующем входе в систему. |  |
+| Установите минимальное количество дней между сменой пароля равным 1. |  |
+| Отключить истечение срока действия пароля. |  |
+| Разрешить пользователю изменять свой пароль в любое время. |  |
+| Установите период предупреждения на 7 дней, а срок действия учетной записи - 20 августа 2050 года. |  |
+|Распечатать информацию об истечении срока действия текущего пароля пользователя |  |
+
+**4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:**  
+
+**5. Выполните следующие задачи, касающиеся размера *резидентного набора* (RSS) и `ulimit` как обычный пользователь:**  
+* Отобразить *мягкие* ограничения по максимальному RSS: 
+* Отобразите *жесткие* ограничения на максимальный RSS: 
+* Установите *мягкие* ограничения на максимальный RSS до 5000 килобайт: 
+* Установите *жесткие* ограничения на максимальный RSS до 10 000 килобайт: 
+* Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный* RSS до 15 000 килобайт. Ты можешь сделать это? Почему?
+
+**6. Рассмотрите следующую `last` строку вывода команды и ответьте на вопросы:**  
+```console
+carol    pts/0        192.168.1.4      Sun May 31 14:16 - 14:22  (00:06)
+```
+* `carol` была подключена с удаленного хоста? Почему?
+*  Как долго длилась сессия `carol`? 
+*  Была ли `carol` подключена через настоящий классический текстовый терминал? Почему?
+
+7. Рассмотрите следующий отрывок из `/etc/sudoers` и ответьте на вопрос ниже.
+```console
+# Host alias specification
+
+Host_Alias SERVERS = 192.168.1.7, server1, server2
+
+# User alias specification
+
+User_Alias REGULAR_USERS = john, mary, alex
+
+User_Alias PRIVILEGED_USERS = mimi, alex
+
+User_Alias ADMINS = carol, %sudo, PRIVILEGED_USERS, !REGULAR_USERS
+
+# Cmnd alias specification
+
+Cmnd_Alias WEB_SERVER_STATUS = /usr/bin/systemctl status apache2
+
+# User privilege specification
+root    ALL=(ALL:ALL) ALL
+ADMINS  SERVERS=WEB_SERVER_STATUS
+
+# Allow members of group sudo to execute any command
+%sudo   ALL=(ALL:ALL) ALL
+```
+Может ли `alex` проверить статус веб-сервера Apache на любом хосте? Почему?
 
 ## Ответы на упражнения для размышления
