Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -834,8 +834,8 @@ Cmnd_Alias SERVICES = /usr/bin/systemctl *
 
 | **Специальное разрешение** | **Числовое представление** | **Символическое представление** | **Найти файлы *только* с этим набором разрешений** |
 |:---------------------------|:---------------------------|:--------------------------------|:---------------------------------------------------|
-| SUID                       |                            |                                 |                                                    |  
-| SGID                       |                            |                                 |                                                    |   
+| `SUID`                     |                            |                                 |                                                    |  
+| `SGID`                     |                            |                                 |                                                    |   
 
 2. Отображение файлов только с установленным битом `SUID` или `SGID` обычно не очень практично. Выполните следующие задачи, чтобы доказать, что ваш поиск может быть более продуктивным: 
 * Найдите все файлы с `SUID` (и другими разрешениями), установленными в `/usr/bin`: 
@@ -843,25 +843,30 @@ Cmnd_Alias SERVICES = /usr/bin/systemctl *
 * Найдите все файлы с `SUID` или `SGID`, установленными в `/usr/bin`:
  
 3. `chage` позволяет вам изменить информацию об истечении срока действия пароля пользователя. От имени пользователя root заполните следующую таблицу, указав правильные команды для пользователя `mary`:  
-
 | **Значение** | **Команды `chage`** |
 |:-------------|:--------------------|
-| Сделанный пароль будет действителен 365 дней. |  | 
+| Сделанный пароль будет действителен 365 дней. |  |
 | Заставить пользователя сменить пароль при следующем входе в систему. |  |
 | Установите минимальное количество дней между сменой пароля равным 1. |  |
 | Отключить истечение срока действия пароля. |  |
 | Разрешить пользователю изменять свой пароль в любое время. |  |
 | Установите период предупреждения на 7 дней, а срок действия учетной записи - 20 августа 2050 года. |  |
-|Распечатать информацию об истечении срока действия текущего пароля пользователя |  |
+| Вывести информацию об истечении срока действия текущего пароля пользователя |  |
 
-4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:
+4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:  
+| **Действие** | **Команда(ы)** |
+|:-------------|:---------------|
+| Показать сетевые файлы для хоста `192.168.1.55` на порту `22` с помощью `lsof`. |  |
+| Показать процессы, получающие доступ к порту по умолчанию веб-сервера Apache на вашем компьютере с помощью `fuser`. |  |
+| Выведите список всех прослушивающих сокетов *udp* на вашем компьютере с помощью `netstat`. |  |
+| Сканируйте порты с `80` по `443` на хосте `192.168.1.55` с помощью `nmap`. |  |
 
 5. Выполните следующие задачи, касающиеся размера *резидентного набора* (RSS) и `ulimit` как обычный пользователь: 
-* Отобразить *мягкие* ограничения по максимальному RSS: 
-* Отобразите *жесткие* ограничения на максимальный RSS: 
-* Установите *мягкие* ограничения на максимальный RSS до 5000 килобайт: 
-* Установите *жесткие* ограничения на максимальный RSS до 10 000 килобайт: 
-* Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный* RSS до 15 000 килобайт. Ты можешь сделать это? Почему?
+* Отобразить *мягкие* ограничения по *максимальному RSS*: 
+* Отобразите *жесткие* ограничения на *максимальный RSS*: 
+* Установите *мягкие* ограничения на *максимальный RSS* до 5000 килобайт: 
+* Установите *жесткие* ограничения на *максимальный RSS* до 10 000 килобайт: 
+* Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный RSS* до 15 000 килобайт. Ты можешь сделать это? Почему?
 
 6. Рассмотрите следующую `last` строку вывода команды и ответьте на вопросы:
 ```console
@@ -1009,13 +1014,19 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 |Распечатать информацию об истечении срока действия текущего пароля пользователя |  |
 
 **4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:**  
+| **Действие** | **Команда(ы)** |
+|:-------------|:---------------|
+| Показать сетевые файлы для хоста `192.168.1.55` на порту `22` с помощью `lsof`. |  |
+| Показать процессы, получающие доступ к порту по умолчанию веб-сервера Apache на вашем компьютере с помощью `fuser`. |  |
+| Выведите список всех прослушивающих сокетов *udp* на вашем компьютере с помощью `netstat`. |  |
+| Сканируйте порты с `80` по `443` на хосте `192.168.1.55` с помощью `nmap`. |  |
 
-**5. Выполните следующие задачи, касающиеся размера *резидентного набора* (RSS) и `ulimit` как обычный пользователь:**  
-* Отобразить *мягкие* ограничения по максимальному RSS: 
-* Отобразите *жесткие* ограничения на максимальный RSS: 
-* Установите *мягкие* ограничения на максимальный RSS до 5000 килобайт: 
-* Установите *жесткие* ограничения на максимальный RSS до 10 000 килобайт: 
-* Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный* RSS до 15 000 килобайт. Ты можешь сделать это? Почему?
+**5. Выполните следующие задачи, касающиеся размера *резидентного набора (RSS)* и `ulimit` как обычный пользователь:**  
+* Отобразить *мягкие* ограничения по *максимальному RSS*: 
+* Отобразите *жесткие* ограничения на *максимальный RSS*: 
+* Установите *мягкие* ограничения на *максимальный RSS* до 5000 килобайт: 
+* Установите *жесткие* ограничения на *максимальный RSS* до 10 000 килобайт: 
+* Наконец, попробуйте увеличить *жесткое* ограничение на *максимальный RSS* до 15 000 килобайт. Ты можешь сделать это? Почему?
 
 **6. Рассмотрите следующую `last` строку вывода команды и ответьте на вопросы:**  
 ```console
@@ -1025,7 +1036,7 @@ carol    pts/0        192.168.1.4      Sun May 31 14:16 - 14:22  (00:06)
 *  Как долго длилась сессия `carol`? 
 *  Была ли `carol` подключена через настоящий классический текстовый терминал? Почему?
 
-7. Рассмотрите следующий отрывок из `/etc/sudoers` и ответьте на вопрос ниже.
+**7. Рассмотрите следующий отрывок из `/etc/sudoers` и ответьте на вопрос ниже.**
 ```console
 # Host alias specification
 
@@ -1051,5 +1062,6 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 %sudo   ALL=(ALL:ALL) ALL
 ```
 Может ли `alex` проверить статус веб-сервера Apache на любом хосте? Почему?
+
 
 ## Ответы на упражнения для размышления
