Update 110.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 110: Security/110.1 Perform security administration tasks/110.1 Lesson 1.md
@@ -131,7 +131,7 @@ carol P 12/07/2019 0 99999 7 -1
 `carol`  
 Логин пользователя. 
 
-`p`  
+`P`  
 Это указывает на то, что у пользователя есть действующий пароль (`P`); другие возможные значения: `L` для заблокированного пароля и `NP` для отсутствия пароля. 
 
 `07.12.2019`  
@@ -846,7 +846,7 @@ Cmnd_Alias SERVICES = /usr/bin/systemctl *
 
 | **Значение** | **Команды `chage`** |
 |:-------------|:--------------------|
-| Сделанный пароль будет действителен 365 дней. |  |
+| Созданный пароль будет действителен 365 дней. |  |
 | Заставить пользователя сменить пароль при следующем входе в систему. |  |
 | Установите минимальное количество дней между сменой пароля равным 1. |  |
 | Отключить истечение срока действия пароля. |  |
@@ -1007,13 +1007,13 @@ ADMINS  SERVERS=WEB_SERVER_STATUS
 
 | **Значение** | **Команды `chage`** |
 |:-------------|:--------------------|
-| Сделанный пароль будет действителен 365 дней. |  | 
-| Заставить пользователя сменить пароль при следующем входе в систему. |  |
-| Установите минимальное количество дней между сменой пароля равным 1. |  |
-| Отключить истечение срока действия пароля. |  |
-| Разрешить пользователю изменять свой пароль в любое время. |  |
-| Установите период предупреждения на 7 дней, а срок действия учетной записи - 20 августа 2050 года. |  |
-|Распечатать информацию об истечении срока действия текущего пароля пользователя |  |
+| Созданный пароль будет действителен 365 дней. | `chage -M 365 mary`, `chage --maxdays 365 mary` | 
+| Заставить пользователя сменить пароль при следующем входе в систему. | `chage -d 0 mary`, `chage --lastday 0 mary` |
+| Установите минимальное количество дней между сменой пароля равным 1. | `chage -m 1 mary`, `chage --mindays 1 mary` |
+| Отключить истечение срока действия пароля. | `chage -M 99999 mary`, `chage --maxdays 99999 mary` |
+| Разрешить пользователю изменять свой пароль в любое время. | `chage -m 0 mary`, `chage --mindays 0 mary` |
+| Установите период предупреждения на 7 дней, а срок действия учетной записи - 20 августа 2050 года. | `chage -W 7 -E 2050-08-20 mary`, `chage --warndays 7 --expiredate 2050-08-20 mary` |
+| Вывести информацию об истечении срока действия текущего пароля пользователя | `chage -l mary`, `chage --list mary` |
 
 **4. Заполните следующую таблицу с помощью соответствующей сетевой утилиты:**  
 | **Действие** | **Команда(ы)** |
